fix: [CDS-76431]: `add-your-stage` form is overflowing when adding a parallel stages (#17306)
* fix: [CDS-76431]: corrected css

* fix: [CDS-76431] wraped deployment types

* Remove spacing as handled by gap

* chore: [CDS-76431]: Update snapshot

* Update snapshot

* Update snapshots

* Make stage builder scrollable

* fix: [CDS-76431]: make overflow auto

--- a/src/modules/70-pipeline/components/PipelineStudio/StageBuilder/StageBuilder.module.scss
+++ b/src/modules/70-pipeline/components/PipelineStudio/StageBuilder/StageBuilder.module.scss
@@ -37,7 +37,7 @@ $dot-space: 10px;
     width: 100%;
     position: relative;
     border-top: 2px solid var(--grey-100);
-
+    overflow: auto;
     background: linear-gradient(90deg, $bg-color ($dot-space - $dot-size), transparent 1%) center,
       linear-gradient($bg-color ($dot-space - $dot-size), transparent 1%) center, $dot-color;
     background-size: $dot-space $dot-space;
