--- a/src/modules/75-cd/components/PipelineStudio/DeployStageSetupShell/DeployStage.module.scss
+++ b/src/modules/75-cd/components/PipelineStudio/DeployStageSetupShell/DeployStage.module.scss
@@ -17,7 +17,8 @@
 
 .deployStage {
   min-width: 464px;
-  max-height: 635px;
+  max-width: 864px;
+  height: 635px;
   margin-top: 2px;
   overflow-y: scroll;
   .content-section {
@@ -108,6 +109,9 @@
   }
   .cardListContainer {
     margin-top: 0 !important;
+    gap: var(--spacing-medium);
+    flex-wrap: wrap;
+    margin-left: 0 !important;
   }
 }
 
